--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,51 @@
 name: Build and publish
 
-on: 
-  [push, workflow_dispatch]
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  
 
 jobs:
   build_pages:
     name: Publish Edition as GitHub Pages Website
     runs-on: ubuntu-latest
     env:
-      ANT_OPTS: -Xmx5g
+      ANT_OPTS: -Xmx10g
     steps:
     - name: Perform Checkout
       uses: actions/checkout@v4
+    - name: install required libs
+      run: pip install -r requirements.txt
+    - name: fetch data
+      run: | 
+        ./shellscripts/fetch_data.sh
+    - name: Complete editions
+      run: |
+        add-attributes -g "./data/editions/*.xml" -b "https://staribacher.acdh.oeaw.ac.at"
+    - name: Complete meta
+      run: |
+        add-attributes -g "./data/meta/*.xml" -b "https://staribacher.acdh.oeaw.ac.at"
+    - name: complete indices
+      run: |
+        add-attributes -g "./data/indices/*.xml" -b "https://staribacher.acdh.oeaw.ac.at"
+    - name: Denormalise indices
+      run: |
+        denormalize-indices -f "./data/editions/*.xml" -i "./data/indices/*.xml" -m ".//*[@ref]/@ref | .//*/@source" -x ".//tei:titleStmt/tei:title[@type='main']/text()"
+    - name: Add dates for calendar
+      run: |
+        pyscripts/make_calendar_data.py
     - name: Install Saxon, Ant and Python
       run: |
         apt-get update && apt-get install openjdk-11-jre-headless ant -y --no-install-recommend
         ./shellscripts/script.sh
         pip install -r requirements.txt
-    - name: Fetch data
-      run: ./fetch_data.sh
     - name: Build
       run: |
         ant
     - name: Update Favicons
-      run: python update_favicons.py
-    - name: Update Translations
-      run: python make_translations.py
+      run: pyscripts/update_favicons.py
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
