--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Install Java and Ant
       run: |
-        apt-get update && apt-get install openjdk-11-jre-headless ant -y --no-install-recommend
+        sudo apt-get update && apt-get install openjdk-11-jre-headless ant -y --no-install-recommend
     - name: Install Saxon
       run: shellscripts/script.sh
     - name: Install Python dependencies
