--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,11 @@
         <factory name="net.sf.saxon.TransformerFactoryImpl"/>
         <classpath location="${basedir}/saxon/saxon9he.jar"/>
     </xslt>
+     <xslt in="./data/indices/listplace.xml" out="${target}/initials.html" style="./xslt/initials.xsl">
+        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+        <classpath location="${basedir}/saxon/saxon9he.jar"/>
+    </xslt>
+
 <!--    <xslt in="./data/indices/listplace.xml" out="${target}/listplace_test.html" style="./xslt/listplace_test.xsl">
         <factory name="net.sf.saxon.TransformerFactoryImpl"/>
         <classpath location="${basedir}/saxon/saxon9he.jar"/>
